--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
     text-align: center;
     font-size: 40px;
     text-decoration-line: underline;
-    color: #FCFFE7;
+    color: white;
     padding-top: 20px;
    }
   img {
@@ -31,23 +31,25 @@
     padding-left: 80px;
     width: 1200px;
     background-color: #1F4068;
-    color: #FCFFE7;
+    color: white;
     font-size: 25px;
   }
   .codes
   {
     background-color: black;
     width: 600px;
+    font-style: oblique;
+    font-size: 20px;
   }
   .test
   {
     position: absolute;
     width: 1300px;
-    height: 950px;
+    height: 1000px;
     border: 5px black;
     padding-left: 80px;
     background-color: #42679c;
-    color: #FCFFE7;
+    color: white;
     font-size: 30px;
   }
   .code{
